# eeg-vcttcn

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
src/cvttcn/: __init__.py  config.py
src/cvttcn/data/: __init__.py  constants.py  dataset.py  download.py  preprocessing.py
src/cvttcn/models/: __init__.py  cvt.py  cvt_tcn.py  tcn.py
src/cvttcn/training/: __init__.py  metrics.py  trainer.py  utils.py
tests/: test_config.py  test_cvt.py  test_cvt_tcn.py  test_dataset.py  test_download.py  test_imports.py  test_metrics.py  test_preprocessing.py  test_tcn.py  test_trainer.py
