[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cvttcn"
version = "0.1.0"
description = "Hybrid Convolutional Vision Transformer + Temporal Convolutional Network for EEG motor-imagery classification on the EEGMMIDB dataset."
requires-python = ">=3.11"
# NOTE: torch is installed separately via requirements.txt because it needs the
# CUDA wheel index; it is deliberately omitted here so a plain `pip install .`
# does not pull the CPU-only build from PyPI.
# (A `readme` field is intentionally omitted; the README is added at project end.)
dependencies = [
    "numpy",
    "scipy",
    "mne>=1.10",
    "scikit-learn",
    "pyyaml",
    "einops",
    "matplotlib",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
